# minizinc

./: .gitmodules  README.md
on-call/: RESULTS.md  on-call-small.dzn  on-call-small.mzn  on-call.mzn  on-call.mzp
python/: README.md  all_solutions.py  first_solution.py
python-wasm/: requirements.txt
rust/graphql/: Cargo.toml
rust/graphql/src/: main.rs
rust/minimal_parser/: model.mzn
rust/minimal_parser/src/: main.rs  minizinc.rs
spikes/bindgen/: Cargo.toml
spikes/bindgen/src/: main.rs
spikes/fly.io/: .gitignore  fly.toml
spikes/graphql/: Cargo.toml
spikes/graphql/src/: main.rs
spikes/grpc-rust/: Cargo.toml
spikes/libminizinc-sys/: Cargo.toml  build.rs  wrapper.h
spikes/minimal_parser/: .gitignore  Cargo.toml
spikes/minimal_parser/src/: MINIZINC_GRAMMAR.md
spikes/next-with-apollo/components/: Countries.js
spikes/next-with-apollo/pages/: client-side.js  server-side.js
spikes/python-wasm/: requirements.txt  simple.py
spikes/rust-fly-io/: Cargo.toml  Dockerfile  fly.toml
spikes/rust-fly-io/src/: main.rs
spikes/rust_dynamo_testcontainer/: Cargo.toml
spikes/rust_dynamo_testcontainer/src/: main.rs
spikes/spawn_minizinc/: Cargo.toml  Dockerfile  fly.toml
spikes/spawn_minizinc/src/: main.rs
spikes/spawn_process/: Cargo.toml  Dockerfile  fly.toml
spikes/spawn_process/src/: main.rs
spikes/update_and_find/: Cargo.toml  README.md  fly.toml
spikes/update_and_find/src/: main.rs
team-assignment/: README.md  team-assignment.dzn  team-assignment.mzn  team-assignment.mzp
tracer/graphql_minizinc_server/: Cargo.toml  Dockerfile  fly.toml
tracer/graphql_minizinc_server/src/: lib.rs  main.rs
tracer/graphql_minizinc_server/src/conversion/: mod.rs
tracer/graphql_minizinc_server/src/graphql/: mod.rs
tracer/graphql_minizinc_server/src/minizinc/: mod.rs
tracer/graphql_minizinc_server/tests/: parse_real_examples.rs
