[package]
name = "grpc-rust"
version = "0.1.0"
authors = ["Mike Moran <mike@houseofmoran.com>"]
edition = "2018"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[dependencies]
tonic = "0.4.2"
prost = "0.7.0"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.4.2"