[package]
name = "rust-fly-io"
version = "0.1.0"
authors = ["Mike Moran <mike@houseofmoran.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.1"
dotenv = "0.15"
