[package]
name = "rust_dynamo_testcontainer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
testcontainers = "0.12.0"
tokio = { version = "1", features = [ "macros", "rt" ] }
pretty_env_logger = "0.4.0"
rusoto_core = "0.46"
rusoto_credential = "0.46"
rusoto_dynamodb = "0.46"