[package]
name = "update_and_find"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
testcontainers = "0.12.0"
tokio = { version = "1", features = [ "macros", "rt" ] }
pretty_env_logger = "0.4.0"
redis = "0.20.2"
actix-web = "3.3.2"
actix-http = "2.2.0"