[package]
name = "graphql_minizinc_server"
version = "0.1.0"
authors = ["Mike Moran <mike@houseofmoran.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1.2"
async-graphql = { version="2.8.4", features=["apollo_tracing"]}
async-graphql-actix-web = "2.8.4"
actix-web = "3.3.2"
